--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=5a98894fb07c234f8529",
+    "/css/app.css": "/css/app.css?id=2f382afd67554344cd21"
 }
